# Zhuleva_Sorting_Visualizer

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md
qml/: Main.qml
src/: SortingController.cpp  SortingController.h  main.cpp
tests/: CMakeLists.txt  test_sorting.cpp
